--- a/ai-lab/session2/session2_is.ipynb
+++ b/ai-lab/session2/session2_is.ipynb
@@ -220,7 +220,8 @@
     "            return build_path(node),(i,len(fringe) + 1)\n",
     "        else:\n",
     "            for action in range(env.action_space.n):\n",
-    "                child = FringeNode(env.sample(node.state, action), node,heu.l1_norm(env.state_to_pos(node.state), env.state_to_pos(env.sample(node.state, action))))\n",
+    "                #child = FringeNode(env.sample(node.state, action), node,heu.l1_norm(env.state_to_pos(node.state), env.state_to_pos(env.sample(node.state, action))))\n",
+    "                child = FringeNode(next_state, node, node.pathcost + 1, heu.l1_norm(environment.state_to_pos(next_state), environment.state_to_pos(goal)))\n",
     "                fringe.add(child)\n",
     "        i+=1"
    ]
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,25 +315,25 @@
       "\n",
       "----------------------------------------------------------------\n",
       "\tGRAPH SEARCH\n",
-      "\tEnvironment:  BlockedMaze-v0\n",
+      "\tEnvironment:  SmallMaze-v0\n",
       "----------------------------------------------------------------\n",
       "\n",
       "[['C' 'C' 'S' 'C']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
-      " ['C' 'C' 'W' 'W']\n",
-      " ['C' 'C' 'W' 'G']]\n",
+      " ['C' 'W' 'W' 'W']\n",
+      " ['C' 'C' 'C' 'G']]\n",
       "\n",
       "\n",
-      "Execution time: 0.0071s\n",
-      "N° of nodes explored: 61\n",
-      "Max n° of nodes in memory: 24\n",
-      "Solution: None\n"
+      "Execution time: 0.004s\n",
+      "N° of nodes explored: 28\n",
+      "Max n° of nodes in memory: 29\n",
+      "Solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n"
      ]
     }
    ],
    "source": [
-    "envname = \"BlockedMaze-v0\"  # Other options are GrdMaze-v0 and BlockedMaze-v0\n",
+    "envname = \"SmallMaze-v0\"  # Other options are GrdMaze-v0 and BlockedMaze-v0\n",
     "\n",
     "print(\"\\n----------------------------------------------------------------\")\n",
     "print(\"\\tGRAPH SEARCH\")\n",
